[project]
name = "rl-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.10.1",
    "gymnasium[all,box2d]>=1.0.0",
    "ipython>=8.31.0",
    "matplotlib>=3.7.5",
    "numpy>=1.26.4",
    "pygame>=2.6.1",
    "torch>=2.5.1",
]
