[project]
name = "rl-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.10.1",
    "gymnasium[all,box2d]>=1.0.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "matplotlib>=3.7.5",
    "numpy>=1.26.4",
    "pillow>=10.4.0",
    "pygame>=2.6.1",
    "scikit-image>=0.25.2",
    "tensorflow>=2.18.0",
    "torch>=2.5.1",
]
